--- a/Patient/Create_businessPartner_request.html
+++ b/Patient/Create_businessPartner_request.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Family/Friend Request</title>
+    <title>Create Business Partner Request</title>
     <link rel="stylesheet" href="./css/Create_BusinessPartner_request_style.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="./js/bootstrap.bundle.min.js"></script>
@@ -19,10 +19,34 @@
         crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+    <div class="modal" id="myModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <!-- Modal body -->
+                <div class="modal-body text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" style="fill: rgb(255, 213, 0);"
+                        class="bi bi-exclamation-circle-fill m-3" viewBox="0 0 16 16">
+                        <path
+                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
+                    </svg>
+                    <h2 class="text-center">Information</h2>
+                    <p class="text-center mx-2">
+                        When submitting a request, you must provide the correct contact information for the patient or
+                        the reaponsibly party. Failure to provide the correct email and phone number will delay service
+                        or be declined.
+                    </p>
+                    <button type="button" class="btn btn-info m-3" data-bs-dismiss="modal">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class=" shadow p-1 px-5 d-flex justify-content-between align-items-center">
         <div>
             <img src="./images/logo-PhotoRoom.png-PhotoRoom.png" alt="" width="110">
@@ -37,11 +61,8 @@
             </button>
         </div>
     </header>
-
     <div class="wrapper min-vw-100 d-flex flex-column align-items-center pt-4">
         <div class="w-75 d-flex flex-row-reverse bg-white">
-
-
             <button type="button" class="mx-5 back_btn btn btn-outline-info">
                 <a href="./Submit_request_screen.html" class="text-decoration-none text-info">back</a> </button>
         </div>
@@ -112,7 +133,6 @@
                     <input id="startDate" class="form-control" type="date" placeholder="DOB" />
                     <label for="floatingInput" class="text-muted">DOB</label>
                 </div>
-
             </div>
             <div class="col-12 mb-3">
                 <h3>Patient Contact information</h3>
@@ -126,7 +146,6 @@
             <div class=" col-md-6 col-sm-12 mb-3 ">
                 <div class="form-floating mb-3">
                     <input id="phone" type="tel" class="form-control " />
-
                 </div>
             </div>
             <div class="col-12 mb-3">
@@ -162,7 +181,6 @@
                     <label for="floatingInput" class="text-muted">Room #/ Suite</label>
                 </div>
             </div>
-
             <div class="col-12 mb-3 d-flex flex-row-reverse gap-3">
                 <button type="button" class="btn btn-outline-info">Cancel</button>
                 <button type="button" class="btn btn-info text-white">Submit</button>
@@ -171,18 +189,14 @@
     </div>
 
     <footer class="p-3 bg-dark text-center text-lg-start d-md-block d-lg-block d-sm-none d-none">
-
         <div class="d-flex justify-content-around">
             <a href="#" class="text-decoration-none text-muted">Terms of condition</a>
             <a href="#" class="text-muted text-decoration-none">Privacy policy</a>
         </div>
-
     </footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js'></script>
     <script>
-        // International telephone format
-        // $("#phone").intlTelInput();
-        // get the country data from the plugin
+
         var countryData = window.intlTelInputGlobals.getCountryData(),
             input = document.querySelector("#phone"),
             input_bp = document.querySelector("#phone-bp"),
@@ -224,6 +238,12 @@
         //Append Value To Phone Field
         $("#phone").prop('value', '+1 ');
         $("#phone-bp").prop('value', '+1 ');
+    </script>
+
+    <script type="text/javascript">
+        $(window).load(function () {
+            $('#myModal').modal('show');
+        });
     </script>
 
 </body>
