--- a/Patient/LoginPage.html
+++ b/Patient/LoginPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
-    <section class=" h-100 d-flex justify-content-center align-items-center">
+<body >
+    <section class=" h-100 d-flex justify-content-around ">
+        <div></div>
         <div class="wrapper  h-100 d-flex justify-content-center align-items-center">
             <div class="main-content d-flex flex-column align-items-center justify-content-center
             ">
@@ -52,6 +54,11 @@
                             </form>
                 </div>
             </div>
+        </div>
+        <div>
+            <button type="button" class="btn btn-outline-info m-3 " id="theme-button">
+                <i class="fa fa-moon-o " aria-hidden="true"></i>
+            </button>
         </div>
     </section>
 
