--- a/Patient/Submit_request_screen.html
+++ b/Patient/Submit_request_screen.html
@@ -11,6 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class=" min-vh-100 ">
@@ -35,16 +36,20 @@
                 <div>&nbsp; </div>
                 <h1 class="text-center">I am a ...</h1>
                 <button type="button" class="mx-5 back_btn btn btn-outline-info">
-                    <a href="./index_patient.html" class="text-decoration-none text-info">back</a>  </button>
+                    <a href="./index_patient.html" class="text-decoration-none text-info">back</a> </button>
             </div>
             <div class="d-grid gap-3 col-sm-7 col-md-6 col-lg-4 mx-auto py-4">
-                <a role="button" href="./Create_patient_request.html" class="btn border-2 border-secondary py-3 font-weight-bold text-secondary"
+                <a role="button" href="./Create_patient_request.html"
+                    class="btn border-2 border-secondary py-3 font-weight-bold text-secondary"
                     style="background-color:#f0e6ff; ">PATIENT</a>
-                <a role="button" href="./Create_Family_Frd_Request.html" class="btn  border-2 border-info py-3 font-weight-bold text-info"
+                <a role="button" href="./Create_Family_Frd_Request.html"
+                    class="btn  border-2 border-info py-3 font-weight-bold text-info"
                     style="background-color: #c7e5f4">FAMILY / FRIEND</a>
-                <a role="button" href="./Create_concierge_request.html" class="btn  border-2 border-success py-3 font-weight-bold text-success"
+                <a role="button" href="./Create_concierge_request.html"
+                    class="btn  border-2 border-success py-3 font-weight-bold text-success"
                     style="background-color: #aeffe3;">CONCIERGE</a>
-                <a role="button" href="./Create_businessPartner_request.html" class="btn  border-2 border-danger py-3 font-weight-bold text-danger "
+                <a role="button" href="./Create_businessPartner_request.html"
+                    class="btn  border-2 border-danger py-3 font-weight-bold text-danger "
                     style="background-color: #ffdbdc;">BUSINESS
                     PARTNERS</a>
             </div>
